Fix loading screen z-index.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -293,6 +293,7 @@ pre.field-input {
     box-shadow: 0px 3px 10px 1px #333;
     font-size: 130%;
     top: 5rem;
+    z-index: 1000;
     left: calc(50vw - 15rem);
     width: 30rem;
     text-align: center;
